--- a/index.html
+++ b/index.html
@@ -3,12 +3,10 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Anton&family=EB+Garamond:ital,wght@0,400..800;1,400..800&family=Fjalla+One&family=Oswald:wght@200..700&display=swap" rel="stylesheet">
   <title>Save the Date</title>
-  <style>
-    body { text-align: center; font-family: Arial, sans-serif; background-color: #f8f0e3; color: #444; }
-    h1 { font-size: 3rem; color: #d23669; }
-    p { font-size: 1.2rem; }
-  </style>
 </head>
 <body>
   <h1>Save the Date!</h1>
