--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <title>Save the Date</title>
 </head>
 <body>
-  <h1 class="eb-garamond-500">Save the Date!</h1>
+  <h1 class="eb-garamond-500">save the date.</h1>
   <p>We're getting married on [Your Date]!</p>
   <p>Location: [Venue/City]</p>
   <p>Formal invitation to follow.</p>
