--- a/index.html
+++ b/index.html
@@ -14,5 +14,6 @@
   <p>We're getting married on [Your Date]!</p>
   <p>Location: [Venue/City]</p>
   <p>Formal invitation to follow.</p>
+  <p>I changed this from VS code.</p>
 </body>
 </html>
