--- a/index.html
+++ b/index.html
@@ -15,5 +15,6 @@
   <p>Location: [Venue/City]</p>
   <p>Formal invitation to follow.</p>
   <p>I changed this from VS code.</p>
+  <p>Then I added then.</p>
 </body>
 </html>
