--- a/index.html
+++ b/index.html
@@ -11,10 +11,8 @@
 </head>
 <body>
   <h1 class="eb-garamond-500">save the date.</h1>
-  <p>We're getting married on [Your Date]!</p>
-  <p>Location: [Venue/City]</p>
+  <p>14th June 2025</p>
+  <p>Location: Caynham Mill, Ludlow</p>
   <p>Formal invitation to follow.</p>
-  <p>I changed this from VS code.</p>
-  <p>Then I added then.</p>
 </body>
 </html>
