--- a/index.html
+++ b/index.html
@@ -10,9 +10,11 @@
   <title>Save the Date</title>
 </head>
 <body>
-  <h1 class="eb-garamond-500">save the date.</h1>
-  <p>14th June 2025</p>
-  <p>Location: Caynham Mill, Ludlow</p>
-  <p>Formal invitation to follow.</p>
+  <div class="container">
+    <h1 class="eb-garamond-500">save the date.</h1>
+    <p>14th June 2025</p>
+    <p>Location: Caynham Mill, Ludlow</p>
+    <p>Formal invitation to follow.</p>
+  </div>
 </body>
 </html>
