--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
 <body>
   <div class="container">
     <h1 class="eb-garamond-500">save the date.</h1>
-    <p>14th June 2025</p>
-    <p>Location: Caynham Mill, Ludlow</p>
-    <p>Formal invitation to follow.</p>
+    <h3>14th June 2025</h3>
+    <p class="grey">Location: Caynham Mill, Ludlow</p>
+    <p class="grey">Formal invitation to follow.</p>
   </div>
 </body>
 </html>
