--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
 </head>
 <body>
   <div class="container">
-    <h1 class="eb-garamond-500">save the date.</h1>
+    <h1>It's the wedding of Rabs & Jim tbf.</h1>
+    <h2 class="eb-garamond-500">save the date:</h2>
     <h3>14th June 2025</h3>
     <p class="grey">Location: Caynham Mill, Ludlow</p>
     <p class="grey">Formal invitation to follow.</p>
