--- a/index.html
+++ b/index.html
@@ -12,8 +12,7 @@
 <body>
   <div class="container">
     <h1>It's the wedding of Rabs & Jim tbf.</h1>
-    <h2 class="eb-garamond-500">save the date:</h2>
-    <h3>14th June 2025</h3>
+    <h2>save the date: <span>14th June 2025</span></h2>
     <p class="grey">Location: Caynham Mill, Ludlow</p>
     <p class="grey">Formal invitation to follow.</p>
     <br>
