--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
   <div class="container">
     <h1>It's the wedding of Rabs & Jim tbf.</h1>
-    <h2><span class="bold">save the date:</span> 14th June 2025</h2>
+    <h2><span class="bold">Save the date:</span> 14th June 2025</h2>
     <p class="grey">Location: Caynham Mill, Ludlow</p>
     <p class="grey">Formal invitation to follow.</p>
     <br>
