--- a/index.html
+++ b/index.html
@@ -7,10 +7,11 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Anton&family=EB+Garamond:ital,wght@0,400..800;1,400..800&family=Fjalla+One&family=Oswald:wght@200..700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="css/animate.css">
   <title>Save the Date</title>
 </head>
 <body>
-  <div class="container">
+  <div class="container wow fadeInUp">
     <h1>It's the wedding of Rabs & Jim tbf.</h1>
     <h2><span class="bold">Save the date:</span> 14th June 2025</h2>
     <p class="grey">Location: Caynham Mill, Ludlow</p>
@@ -18,4 +19,8 @@
     <br>
   </div>
 </body>
+<script src="js/wow.min.js"></script>
+              <script>
+              new WOW().init();
+</script>
 </html>
