--- a/index.html
+++ b/index.html
@@ -12,11 +12,14 @@
 </head>
 <body>
   <div class="container wow fadeInUp">
-    <h1>It's the wedding of Rabs & Jim tbf.</h1>
-    <h2><span class="bold">Save the date:</span> 14th June 2025</h2>
-    <p class="grey">Location: Caynham Mill, Ludlow</p>
-    <p class="grey">Formal invitation to follow.</p>
+    <div class="image"></div>
+    <div class="info">
+      <h1><span class="bold">Save the date:</span> 14th June 2025</h1>
+      <h2>It's the wedding of Rabs & Jim tbf.</h2>
+      <p class="grey">Location: Caynham Mill, Ludlow</p>
+      <p class="grey">Formal invitation to follow.</p>
     <br>
+  </div>
   </div>
 </body>
 <script src="js/wow.min.js"></script>
