--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
 </head>
 <body>
   <div class="container wow fadeInUp">
-    <div class="image"></div> 
+    <!-- <div class="image"></div>  -->
     <div class="info">
       <h1><span class="bold">Save the date:</span> 14th June 2025</h1>
       <h2>It's the wedding of Rabs & Jim tbf.</h2>
       <p class="grey">Location: Caynham Mill, Ludlow</p>
       <p class="grey">More information to follow.</p>
-      <p class="grey"><b>RSVP</b> by contacting Rosie & Jim</p>
+      <p class="grey"><b>RSVP</b> by contacting your Rosie & Jim representative</p>
     <br>
   </div>
   </div>
