--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
   <div class="container wow fadeInUp">
     <!-- <div class="image"></div>  -->
     <div class="info">
-      <h1><span class="bold">Save the date: </span><br/>14th June 2025</h1>
+      <h2><span class="bold">Save the date: </span></h2>
+      <h1>14th June 2025</h1>
       <h2>It's the wedding of Rabs & Jim tbf.</h2>
       <p class="grey">Location: Caynham Mill, Ludlow</p>
       <p class="grey">More information to follow.</p>
