--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Anton&family=EB+Garamond:ital,wght@0,400..800;1,400..800&family=Fjalla+One&family=Oswald:wght@200..700&display=swap"
+      href="https://fonts.googleapis.com/css2?family=EB+Garamond:ital,wght@0,400..800;1,400..800&display=swap"
       rel="stylesheet"
     />
     <link rel="stylesheet" href="style.css" />
@@ -20,21 +20,58 @@
   </head>
 
   <body>
-    <div class="container wow fadeInUp">
-      <!-- <div class="image"></div>  -->
+    <div class="container">
       <div class="info">
-        <h2><span class="bold">Save the date: </span></h2>
-        <h1>14th June 2025</h1>
-        <h2>It's the wedding of Rabs & Jim tbf.</h2>
-        <p class="grey">Location: Caynham Mill, Ludlow</p>
-        <p class="grey">
-          More information will follow, please RVSP by exapnding the section
-          below and we will keep guests up-to-date via e-mail.
-        </p>
+        <div class="m-w">
+          <h2 class="bold purp">– Save the Date –</h2>
+          <h1>Saturday 14th June 2025</h1>
+          <p>
+            Rosie & Jim are getting married and would love for you to join them
+            for their wedding ceremony, followed by an evening of celebrations
+            and dancing in a field.
+          </p>
 
-        <br />
+          <div class="details">
+            <p>
+              Please arrive by <strong>1PM</strong> to be seated for the
+              ceremony beginning at <strong>2PM</strong>.
+            </p>
 
-        <div id="rsvp-form-container"></div>
+            <div class="address-col flex">
+              <iframe
+                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2436.991137783332!2d-2.671362!3d52.352446!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x487069f2d544af93%3A0x77271d3f0944fedb!2sLudlow%20Ecolog%20Cabins!5e0!3m2!1sen!2suk!4v1737577699545!5m2!1sen!2suk"
+                width="350"
+                height="240"
+                style="border: 0"
+                allowfullscreen=""
+                loading="lazy"
+                referrerpolicy="no-referrer-when-downgrade"
+              ></iframe>
+
+              <p class="l-a address">
+                Ludlow Ecolog Cabins <br />
+                Caynham Mill <br />
+                Ludlow<br />
+                Shropshire<br />
+                SY8 3BH
+              </p>
+            </div>
+          </div>
+
+          <div class="cta">
+            <p>
+              You can find some basic information about accomodation and travel
+              <a href="/information.html">here</a> for the time being. Further
+              details will be coming soon.
+            </p>
+            <p>
+              We kindly ask that you RSVP by filling in the form below within
+              the next three weeks
+            </p>
+          </div>
+
+          <div id="rsvp-form-container"></div>
+        </div>
       </div>
     </div>
   </body>
