--- a/information.html
+++ b/information.html
@@ -24,7 +24,7 @@
       <div class="info">
         <div class="m-w l-a">
           <div class="nav">
-            <a href="/index.html">↤ Back to main info</a>
+            <a href="/daytime.html">↤ Back to main info</a>
           </div>
           <h2 class="bold">Accommodation</h2>
           <p>
