--- a/daytime.html
+++ b/daytime.html
@@ -35,8 +35,8 @@
 
           <div class="details">
             <p>
-              Please arrive by 12:30 to be seated for the ceremony beginning at
-              1PM.
+              Please aim to arrive at 12:30 to be seated for the ceremony
+              beginning at 1PM.
             </p>
 
             <div class="address-col flex">
