--- a/evening.html
+++ b/evening.html
@@ -19,7 +19,7 @@
     <title>Evening guest information</title>
   </head>
 
-  <body>
+  <body class="evening">
     <div class="container">
       <div class="info">
         <div class="m-w">
