--- a/information-eve.html
+++ b/information-eve.html
@@ -19,7 +19,7 @@
     <title>Accomodation & Travel</title>
   </head>
 
-  <body>
+  <body class="evening">
     <div class="container">
       <div class="info">
         <div class="m-w l-a">
